[package]
name = "rconnect"
version = "0.1.0"
description = "A KDE Connect server/client implementation in Rust"
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/rconnect"
keywords = ["kdeconnect", "server", "client"]
categories = ["network-programming"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[dependencies]
dns-lookup = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
members = [
  "rconnect-cli",
]
