[package]
name = "rconnect-cli"
version = "0.0.1"
description = "Rusty Connect CLI interface."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/iconnect"
keywords = ["kdeconnect", "network"]
categories = ["network-programming"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[dependencies]
rconnect = { path = "../" }
anyhow = "1.0"
dns-lookup = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
